<resources>
    <string name="app_name">Toko Store</string>
    <string name="starting_slogan">Mobile Ecommerce, Better Results</string>
    <string name="starting_desc">Create your quick account and find the best devices !</string>
    <string name="first_name_hint">Nhập tên của bạn ...</string>
    <string name="last_name_hint">Nhập họ của bạn ...</string>
    <string name="registerTextTop">Hãy tạo tài khoản</string>
    <string name="register_text_top_next">Miễn Phí</string>
    <string name="first_name_label">Tên</string>
    <string name="last_name_label">Họ</string>
    <string name="password_hint">Nhập mật khẩu ...</string>
    <string name="password_label">Mật khẩu</string>
    <string name="email_hint">Nhập Email ...</string>
    <string name="email_label">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="demo_string_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="address_label">Address</string>
    <string name="address_hint">Nhập địa chỉ của bạn ...</string>
    <string name="btn_order_text">Chi tiết đơn hàng</string>
    <string name="about_toko_desc">\t\t\t\tToko Store là một ứng dụng thương mại điện tử được thiết kế đơn giản nhưng vẫn đảm bảo tính năng và tính thẩm mỹ. Ứng dụng “Toko Store” mang cho mình 2 màu sắc chủ đạo chính là màu xanh dương đậm (mã màu : #006A81 ) và màu vàng nhạt (mã màu : #F7D662 ) . Màu xanh dương đậm thường được sử dụng để tạo ra sự chuyên nghiệp và đáng tin cậy. Trong khi đó, màu vàng nhạt thường được liên kết với sự tươi vui, sáng tạo và cảm giác thoải mái. Vì thế màu sắc của Toko Store đem lại cho người dùng cảm giác dễ chịu và tạo sự chuyên nghiệp và trung thực cho thương hiệu.</string>
</resources>