<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/starting_background" />


    <TextView
        android:id="@+id/registerTextTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:text="@string/registerTextTop"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerTextTopNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/register_text_top_next"
        android:textColor="@color/primary"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTextTop" />

    <TextView
        android:id="@+id/firstNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/first_name_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTextTopNext" />


    <EditText
        android:id="@+id/firstNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="name"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/user"
        android:drawablePadding="4dp"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameLabel"
        tools:ignore="VisualLintTextFieldSize" />


    <TextView
        android:id="@+id/lastNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/last_name_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameField" />


    <EditText
        android:id="@+id/lastNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="name"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/user"
        android:drawablePadding="4dp"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameLabel"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/address_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameField" />


    <EditText
        android:id="@+id/addressField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="name"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/baseline_address"
        android:drawablePadding="4dp"
        android:hint="@string/address_hint"
        android:inputType="textPersonName"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressLabel"
        tools:ignore="VisualLintTextFieldSize" />


    <TextView
        android:id="@+id/emailNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/email_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressField" />


    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/mail"
        android:drawablePadding="4dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailNameLabel"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/password_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailField" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="password"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/password"
        android:drawablePadding="4dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel"
        tools:ignore="VisualLintTextFieldSize" />

    <ImageView
        android:id="@+id/forwardBtn"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/forward_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

    <TextView
        android:id="@+id/existingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Đã có tài khoản ?"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forwardBtn" />

    <TextView
        android:id="@+id/toLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="Đăng nhập ở đây !"
        android:textColor="@color/primary"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/existingText" />

</androidx.constraintlayout.widget.ConstraintLayout>